# turbo-dom

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXPERIMENTS.md  MESSAGECHANNEL-VIRTUALIZE.md  REACT19-DOM-GAPS.md  README.md  RUST_PORT_PLAN.md  index.d.ts  index.js  package-lock.json  package.json  turbo-dom-spec.md
.github/workflows/: ci.yml
bench/: fixtures.mjs  parse.mjs  query.mjs  scorecard.mjs
crates/turbo-dom/: Cargo.toml  README.md
crates/turbo-dom/examples/: churn_profile.rs  crawl.rs
crates/turbo-dom/src/: lib.rs
crates/turbo-dom/src/rtdom/: bench.rs  conformance.rs  dump.rs  query.rs  tree.rs
crates/turbo-dom/tests/: consumer_contract.rs
harness/: adapters.mjs  conformance.mjs  delta.mjs
src/: core.rs  lib.rs  spike.rs
src/environment/: install.mjs  jest.cjs  vitest.mjs
src/rtdom/: bench.rs  cascade.rs  mod.rs  node_ref.rs  query.rs  serialize.rs  tree.rs
src/runtime/: buffer.mjs  cascade.mjs  collections.mjs  dom.mjs  events.mjs  html-serialize.mjs  index.mjs  selectors.mjs  stubs.mjs  svg.mjs  window.mjs
test/: component-gauntlet.test.mjs  conformance.test.mjs  core-apis.test.mjs  coverage-fill.test.mjs  delta.test.mjs  environment.test.mjs  parser.test.mjs  runtime.test.mjs  selectors-lists.test.mjs  selectors-parser.test.mjs  surface-sweep.test.mjs  surface.test.mjs  svg.test.mjs
test-vitest/: buckets.test.jsx  buckets2.test.jsx  dom.test.jsx  reentrancy.test.jsx  vitest.config.mjs
